--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     url: jdbc:mysql://localhost:13309/STCK
     username: root
     password: 12345678
+    hikari:
+      maximum-pool-size: 40
 
 logging:
   level:
